--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/artist-style.css">
   </head>
 </head>
-<body>
+<body class="bg-dark">
     <div class="container-fluid" >
         <div class="row">
-          <div class="col-3 bg-dark">
+          <div class="col-12 col-md-3" id="container-navbar">
             <!--navbar-->
-            <nav class="navbar navbar-expand-lg bg-body-dark">
-              <div class="container-fluid bg-dark flex-column ps-0">
-                <div id="navbar" class="container-fluid bg-dark flex-column ps-0">
-                  <a class="navbar-brand" href="#">
+            <nav class="navbar navbar-expand-lg bg-transparent">
+              <div class="container-fluid flex-column ps-md-0 bg-transparent">
+                <div id="navbar" class="container-fluid flex-column bg-transparent ps-0">
+                  <a class="navbar-brand" href="#" id="three-dots">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="16"
@@ -44,11 +44,11 @@
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div
-                    class="collapse navbar-collapse d-flex flex-column"
+                    class="collapse navbar-collapse d-flex flex-column bg-transparent"
                     id="navbarNavDropdown"
                   >
-                    <div class="container-fluid d-flex">
-                      <ul class="navbar-nav mt-3 flex-column">
+                    <div class="container-fluid d-flex" id="mobile-navbar">
+                      <ul class="navbar-nav mt-3 flex-md-column bg-transparent" id="navbar-menu">
                         <li class="nav-item d-flex align-items-center">
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -378,8 +378,8 @@
                    <div class="container-fluid mt-5">
                     <div class="row">
                         <div id="popularArtistSongs"class="col-7">
-                            <h3 class="text-light mb-5">Popolari</h3>
-                            <ol class="text-light fw-bold">
+                            <h3 class="text-light mb-4">Popolari</h3>
+                            <ol class="text-light fw-bold ps-3">
                               <li>
                                 <div class="d-flex justify-content-between align-items-center">
                                   <div class="d-flex me-5">
@@ -390,7 +390,7 @@
                                     <p>287.350.179</p>
                                   </div>
                                   <div>
-                                    <p class="mx-5 ps-5">3:18</p>
+                                    <p class="mx-5 ps-2">3:18</p>
                                   </div>
                                 </div>
                               </li>
@@ -404,7 +404,7 @@
                                     <p>287.350.179</p>
                                   </div>
                                   <div>
-                                    <p class="mx-5 ps-5">3:18</p>
+                                    <p class="mx-5 ps-2">3:18</p>
                                   </div>
                                 </div>
                               </li>
@@ -418,7 +418,7 @@
                                     <p class="mx-5 px-5">287.350.179</p>
                                   </div>
                                   <div>
-                                    <p class="mx-5 ps-5">3:18</p>
+                                    <p class="mx-5 ps-2">3:18</p>
                                   </div>
                                 </div>
                               </li>
@@ -432,7 +432,7 @@
                                     <p class="mx-5 px-5">287.350.179</p>
                                   </div>
                                   <div>
-                                    <p class="mx-5 ps-5">3:18</p>
+                                    <p class="mx-5 ps-2">3:18</p>
                                   </div>
                                 </div>
                               </li>
@@ -446,7 +446,7 @@
                                     <p class="mx-5 px-5">287.350.179</p>
                                   </div>
                                   <div>
-                                    <p class="mx-5 ps-5">3:18</p>
+                                    <p class="mx-5 ps-2">3:18</p>
                                   </div>
                                 </div>
                               </li>
