--- a/artist-page.html
+++ b/artist-page.html
@@ -387,50 +387,9 @@
                    </div>
 
                    <div class="container-fluid mt-4" id="discover-more">
-                    <div class="row g-1">
-                      <div class="col-12 d-flex justify-content-between">
-                        <h3 class="text-white">Altro di Artista</h3>
-                        <a href="">
-                          <p class="text-secondary fw-semibold">Vedi discografia</p>
-                        </a>
-                      </div>
-                      <div class="col-3">
-                        <div class="card bg-dark p-2">
-                          <img src="assets/imgs/main/image-3.jpg" class="card-img-top" alt="..." />
-                          <div class="card-body">
-                            <p class="card-text text-white">Titolo Album</p>
-                            <p class="text-secondary fw-semibold">2010</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-3">
-                        <div class="card bg-dark p-2">
-                          <img src="assets/imgs/main/image-3.jpg" class="card-img-top" alt="..." />
-                          <div class="card-body">
-                            <p class="card-text text-white">Titolo Album</p>
-                            <p class="text-secondary fw-semibold">2010</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-3">
-                        <div class="card bg-dark p-2">
-                          <img src="assets/imgs/main/image-3.jpg" class="card-img-top" alt="..." />
-                          <div class="card-body">
-                            <p class="card-text text-white">Titolo Album</p>
-                            <p class="text-secondary fw-semibold">2010</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-3">
-                        <div class="card bg-dark p-2">
-                          <img src="assets/imgs/main/image-3.jpg" class="card-img-top" alt="..." />
-                          <div class="card-body">
-                            <p class="card-text text-white">Titolo Album</p>
-                            <p class="text-secondary fw-semibold">2010</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+                    <div class="row g-1" id="artistAlbumList">
+                      
+                    </div>-
                   </div>
                     
 
