--- a/artist-page.html
+++ b/artist-page.html
@@ -66,7 +66,7 @@
                           <a
                             class="nav-link active text-light"
                             aria-current="page"
-                            href="#"
+                            href="index.html"
                             >Home</a
                           >
                         </li>
